--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
-
+Annie
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -328,3 +328,8 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+/.metadata/
+/TestDBConnection/Debug
+/TestDBConnection/.settings
+/TestDBConnection/.cproject
+/TestDBConnection/.project
